--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="layout">
+        <div class="header">
+            <div><input type="text" name="" id=""></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            
+        </div>
+        <div class="sidebar">
+                <div class="tittle"><img class="icon" src="images/dashboard-logo.png" alt="">Dashboard</div>
+                <nav class="nav-a">
+                    <div class="element"><img src="images/home.svg" alt="" class="icon">Home</div>
+                    <div class="element"><img src="images/profile.svg" alt="" class="icon">Profile</div>
+                    <div class="element"><img src="images/comment.svg" alt="" class="icon">Messages</div>
+                    <div class="element"><img src="images/history.svg" alt="" class="icon">History</div>
+                    <div class="element"><img src="images/tasks.svg" alt="" class="icon">Tasks</div>
+                    <div class="element"><img src="images/community.svg" alt="" class="icon">Communities</div>
+                </nav>
+
+                <nav class="nav-b">
+                    <div class="element"><img src="view-dashboard.svg" alt="" class="icon">Element</div>
+                    <div class="element"><img src="view-dashboard.svg" alt="" class="icon">Element</div>
+                    <div class="element"><img src="view-dashboard.svg" alt="" class="icon">Element</div>
+                </nav>
+
+        </div>
+        <div class="main-content"></div>
+    </div>
     
 </body>
 </html>
